--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 yew = "0.18"
-zip = "0.5"
+zip = { version = "0.5", default-features = false, features = ["deflate"] }
