--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 yew = "0.18"
 zip = { version = "0.5", default-features = false, features = ["deflate"] }
+rmp-serde = "0.15"
