--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 yew = "0.18"
 zip = { version = "0.5", default-features = false, features = ["deflate"] }
 rmp-serde = "0.15"
+dyn-clone = "1.0"
